// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> snapshot should match snapshot 1`] = `
<ForwardRef
  aria-label="test"
  listSize={2}
>
  <ul
    aria-label="test"
    className="md-list-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</ForwardRef>
`;

exports[`<List /> snapshot should match snapshot with className 1`] = `
<ForwardRef
  aria-label="test"
  className="example-class"
  listSize={2}
>
  <ul
    aria-label="test"
    className="example-class md-list-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</ForwardRef>
`;

exports[`<List /> snapshot should match snapshot with id 1`] = `
<ForwardRef
  aria-label="test"
  id="example-id"
  listSize={2}
>
  <ul
    aria-label="test"
    className="md-list-wrapper"
    id="example-id"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</ForwardRef>
`;

exports[`<List /> snapshot should match snapshot with role 1`] = `
<ForwardRef
  aria-label="test"
  listSize={2}
  role="tablist"
>
  <ul
    aria-label="test"
    className="md-list-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    role="tablist"
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</ForwardRef>
`;

exports[`<List /> snapshot should match snapshot with style 1`] = `
<ForwardRef
  aria-label="test"
  listSize={2}
  style={
    {
      "color": "pink",
    }
  }
>
  <ul
    aria-label="test"
    className="md-list-wrapper"
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    style={
      {
        "color": "pink",
      }
    }
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-allow-text-select={false}
            data-disabled={false}
            data-interactive={true}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onPointerDown={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</ForwardRef>
`;
